<resources>
    <string name="app_name">Quick Journal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_choose_date">Choose Date</string>

    <string name="content_authority">quickjournal.bhupendrashekhawat.me.android.quickjournal</string>

    <string name="string_journal_fragment_empty_list">No journal entries found. Start your journal journey today.</string>

    <string name="string_calendar_fragment_empty_list">No journal entry found for the selected day</string>

    <string name="string_calendar_fragment_start">Tap on a day to find journal entry if available!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="drawer_List">
        <item>Journal</item>
        <item>Calendar</item>
        <item>Settings</item>
        <item>Logout</item>
    </array>
    <string name="title_activity_journal_entry">JournalEntryActivity</string>

    <string name="sample_quote">\" Winners are not people who never fail, but people who never quit. \"</string>
    <string name="grateful_header_text">Things I am grateful for...</string>
    <string name="amazing_things_header_text">Amazing things that happened today ...</string>
    <string name="things_to_make_today_great_header_text">What will make today great ?</string>
    <string name="make_today_even_better_header_text">How could I have made today even better ?</string>
    <string name="my_affirmations_header_text">My daily affirmations. I am ....</string>
    <string name="title_activity_journal_entry_display">JournalEntryDisplayActivity</string>

    <string name="content_desc_image">Image</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="sign_in_cancelled">The sign in attempt was cancelled.</string>
    <string name="no_internet_connection">No Internet connection. Pleasy try again!</string>


    <string name="edit_text_content_description">Input data here</string>
    <string name="text_view_content_description">Your input entries here</string>
    <string name="calendar_view_desc">Calendar view to choose date</string>
    <string name="card_to_show_journal_entry">Card to show journal entry for selected day</string>
    <string name="journal_entries_list">journal_entries_list</string>
    <string name="date_view">date_view</string>
    <string name="greeting">Hi,</string>

</resources>
