<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="quickjournal.bhupendrashekhawat.me.android.quickjournal.JournalEntryActivity">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_choose_date"
        android:orderInCategory="100"
        android:title="@string/action_choose_date"
        android:icon="@drawable/ic_calendar_blank"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
