<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="quickjournal.bhupendrashekhawat.me.android.quickjournal.JournalFragment">



    <ListView
        android:id="@+id/journal_entries_list_view"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/journal_entries_list">

    </ListView>

    <!-- Here is the view to show if the list is emtpy -->
    <TextView android:id="@+id/empty_journal_list_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_journal_fragment_empty_list" />

    <com.google.android.gms.ads.AdView
        android:layout_gravity="bottom|center"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</FrameLayout>
