<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/content_journal_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="quickjournal.bhupendrashekhawat.me.android.quickjournal.JournalEntryActivityFragment"
    tools:showIn="@layout/activity_journal_entry"
    android:orientation="vertical">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_quote"
        android:id="@+id/quote_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grateful_header_text"
        android:id="@+id/grateful_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:hint="Here..."/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/things_to_make_today_great_header_text"
        android:id="@+id/make_today_great_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:hint="Here ..."/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_affirmations_header_text"
        android:id="@+id/my_affirmations_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:hint="Here..."/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amazing_things_header_text"
        android:id="@+id/amazing_things_happened_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:hint="Here..."/>

    <android.support.v4.widget.Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_today_even_better_header_text"
        android:id="@+id/made_today_better_textview"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:hint="Here ..."/>


</LinearLayout>
</ScrollView>