<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/content_journal_entry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="quickjournal.bhupendrashekhawat.me.android.quickjournal.JournalEntryActivityFragment"
        tools:showIn="@layout/activity_journal_entry"
        android:orientation="vertical">


        <!--<android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="56dp" />-->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sample_quote"
            android:id="@+id/quote_tv"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:contentDescription="@string/sample_quote"
            />
        <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grateful_header_text"
            android:id="@+id/grateful_qtv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="@dimen/margin_question"
            android:contentDescription="@string/grateful_header_text"
            />

        <include
            android:id="@+id/grateful_tv"
            layout="@layout/text_view_with_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_view_content_description"
            />


       <!-- <android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="20dp" />-->
        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft= "30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="2dp"
            android:background="#d3d3d3"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/things_to_make_today_great_header_text"
            android:id="@+id/make_today_great_qtv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="@dimen/margin_question"
            android:contentDescription="@string/things_to_make_today_great_header_text"
            />


        <include
            android:id="@+id/today_great_tv"
            layout="@layout/text_view_with_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_view_content_description"/>

        <!--<android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="20dp" />
-->
        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft= "30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="2dp"
            android:background="#d3d3d3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_affirmations_header_text"
            android:id="@+id/my_affirmations_qtv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="@dimen/margin_question"
            android:contentDescription="@string/my_affirmations_header_text"
            />

        <TextView
            android:id="@+id/affirmations_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:minLines="2"
            android:layout_margin="8dp"
            android:contentDescription="@string/text_view_content_description"
            />

        <!--<android.support.v4.widget.Space
            android:layout_width="1dp"
            android:layout_height="20dp" />-->

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft= "30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="2dp"
            android:background="#d3d3d3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amazing_things_header_text"
            android:id="@+id/amazing_things_happened_qtv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="@dimen/margin_question"
            android:contentDescription="@string/amazing_things_header_text"
            />

        <include
            android:id="@+id/amazing_tv"
            layout="@layout/text_view_with_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_view_content_description"/>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft= "30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="2dp"
            android:background="#d3d3d3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_today_even_better_header_text"
            android:id="@+id/made_today_better_qtv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="@dimen/margin_question"
            android:contentDescription="@string/make_today_even_better_header_text"
            />

        <TextView
            android:id="@+id/made_today_better_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:minLines="2"
            android:layout_margin="8dp"
            android:hint="Here ..."
            android:contentDescription="@string/text_view_content_description"/>


    </LinearLayout>
</ScrollView>